k3s/internal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxa-deployment
  labels:
    app: fluxa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluxa
  template:
    metadata:
      labels:
        app: fluxa
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
